[tool.poetry]
name = "aragog"
version = "0.1.0"
description = ""
authors = ["Anna Filippova <anna.filipp@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
celery = "^5.0.5"
pydantic = "^1.8.1"
Serializer = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
